--- a/task/src/main/webapp/WEB-INF/views/room/room-add.html
+++ b/task/src/main/webapp/WEB-INF/views/room/room-add.html
@@ -2,24 +2,53 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<link th:insert="templates/head.html" />
-<title th:text="#{titleform.position}">title</title>
+		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<th:block th:insert="templates/head.html :: link"></th:block>
+		<th:block th:insert="templates/head.html :: script"></th:block>
+		<title th:text="#{titleform.position}">title</title>
 </head>
 <body>
-	<div class="top-bar" >
-		<div th:insert="templates/menu/top-directories.html"></div>
-		<div th:insert="templates/menu/logof-logon.html"></div>
-	</div>
-	<br>
-	<div class="row">
-		<div class="column small-12 large-12">
-			<h1 th:text="#{titleform.new}">new room</h1>
-			<form class="row" th:action="@{add}" method="post" th:object="${room}">
-				<span class="column small-12 large-12" th:insert="templates/room-form.html"></span>
-			</form>
+
+	<div class="app-dashboard shrink-medium">
+		<div class="row expanded app-dashboard-top-nav-bar">
+			<div class="columns medium-2">
+				<button data-toggle="app-dashboard-sidebar"
+					class="menu-icon hide-for-medium"></button>
+				<a class="app-dashboard-logo" th:text="#{titleform.room}"></a>
+			</div>
+			<div class="columns show-for-medium">
+			
+			</div>
+			<div th:insert="templates/menu/logof-logon.html"></div>
+		</div>
+
+		<div class="app-dashboard-body off-canvas-wrapper">
+			<div id="app-dashboard-sidebar"
+				class="app-dashboard-sidebar position-left off-canvas off-canvas-absolute reveal-for-medium"
+				data-off-canvas>
+				<div class="app-dashboard-sidebar-title-area">
+					<div class="app-dashboard-close-sidebar">
+						<ul class="vertical menu expanded">
+							<th:bloc th:insert="fragments/menu.html :: top-directories"></th:bloc>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+			<div class="app-dashboard-body-content off-canvas-content"data-off-canvas-content>
+				<div class="row">
+					<div class="column small-12 large-12">
+					<h3 th:text="#{titleform.new}">new room</h3>
+					<form class="row" th:action="@{add}" method="post" th:object="${room}">
+						<span class="column small-12 large-12" th:insert="fragments/room.html :: info-form"></span>
+					</form>
+				</div>
+			</div>
+			</div>
 		</div>
 	</div>
+	
 	<script type="text/javascript">
 		$(document).foundation();
 	</script>
