--- a/task/src/main/webapp/WEB-INF/views/room/rooms.html
+++ b/task/src/main/webapp/WEB-INF/views/room/rooms.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorator="template.html">
-<head>
-	<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<th:block th:insert="templates/head.html :: link"></th:block>
-	<th:block th:insert="templates/head.html :: script"></th:block>
-<title th:text="#{titleform.room}">title</title>
-</head>
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+	<head>
+		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<th:block th:insert="templates/head.html :: link"></th:block>
+		<th:block th:insert="templates/head.html :: script"></th:block>
+		<title th:text="#{titleform.room}">title</title>
+	</head>
 <body>
 	<!-- 
 	<div class="top-bar" >
@@ -26,10 +25,7 @@
 				<a class="app-dashboard-logo" th:text="#{titleform.room}"></a>
 			</div>
 			<div class="columns show-for-medium">
-				<div class="app-dashboard-search-bar-container">
-					<input class="app-dashboard-search" type="search" placeholder="Search"> 
-					<i class="app-dashboard-search-icon fa fa-search"></i>
-				</div>
+			
 			</div>
 			<div th:insert="templates/menu/logof-logon.html"></div>
 		</div>
@@ -41,13 +37,7 @@
 				<div class="app-dashboard-sidebar-title-area">
 					<div class="app-dashboard-close-sidebar">
 						<ul class="vertical menu expanded">
-							
-							<li>
-								<a href="#" th:href="@{employee/}" th:text="#{titleform.admin}" class="expanded"></a>
-							</li>
-							<li>
-								<a href="#" th:href="@{position/}" th:text="#{titleform.home.directories}" class="expanded" ></a>
-							</li>
+							<th:bloc th:insert="fragments/menu.html :: top-directories"></th:bloc>
 						</ul>
 					</div>
 				</div>
@@ -61,8 +51,7 @@
 						<th>
 							<ul class="menu align-right">
 								<li>
-									<!-- <a th:href="@{add}"	class="fi-page-add button "></a> -->
-									<button class="button fi-page-add" th:attr="data-open='addRoom'"></button>
+									<a class="button fi-page-add" data-th-href="add"></a>
 								</li>
 							</ul>
 						</th>
@@ -77,7 +66,7 @@
 									<button class="button fi-list" type="button" th:attr="data-toggle='example-' + @{{id}(id=${room.id})}" ></button>
 									<div class="dropdown-pane dropdown-pane-zie" th:id="'example-' + @{{id}(id=${room.id})}" data-dropdown data-auto-focus="true" data-close-on-click="true">
 										<ul class="menu vertical">
-    										<li><a th:href="@{edit/(id=${room.id})}" th:text="#{buttonname.edit}" th:attr="data-open='editRoom'"></a></li>
+    										<li><a th:href="@{edit/{id}(id=${room.id})}" th:text="#{buttonname.edit}" data-open="editRoom" th:attr="data-ajax-url='edit/?id='+${room.id}"></a></li>
       										<li><a th:href="@{delete/{id}(id=${room.id})}" th:text="#{buttonname.delete}"></a></li>
       									</ul>
       					 			</div>
@@ -90,28 +79,15 @@
 			</div>
 		</div>
 	</div>
-
-	<br>
-	<!-- modal add  -->
-	<div class="reveal" id="addRoom" data-reveal	data-options="closeOnClick:false; closeOnEsc:false;">
-		<h1 th:text="#{titleform.new}">new room</h1>
-		<form class="row" th:action="@{add}" method="post" th:object="${room}">
-			<span class="column small-12 large-12" th:insert="templates/room-form.html"></span>
-		</form>
-		<button class="close-button" data-close aria-label="Close modal" type="button">
-			<span aria-hidden="true">&times;</span>
-		</button>
-	</div>
 	
-	<!-- modal edit  -->
-	<div class="reveal" id="addRoom" data-reveal	data-options="closeOnClick:false; closeOnEsc:false;">
-		<h1 th:text="#{titleform.edit}">edit room</h1>
-			<form class="row" th:action="@{{id}(id=${room.id})}" method="post" th:object="${room}">
-				<span class="column small-12 large-12" th:insert="templates/room-form.html"></span>
-			</form>
-		<button class="close-button" data-close aria-label="Close modal" type="button">
-			<span aria-hidden="true">&times;</span>
-		</button>
+	<!-- modal -->
+	<div class="reveal" id="deleteRoom" data-reveal data-options="closeOnClick:false; closeOnEsc:false;">
+  		<h1>Неможливо видалити.</h1>
+  			<p class="lead">Бо запис має залежності.</p>
+  			<p class="lead">Наркотична, ігрова, сексуальна, алкогольна, інтернет і далі за списком.</p>
+  		<button class="close-button" data-close aria-label="Close modal" type="button">
+    		<span aria-hidden="true">&times;</span>
+  		</button>
 	</div>
 	
 	<script type="application/javascript" th:inline="javascript">
