--- a/task/src/main/webapp/WEB-INF/views/fragments/menu.html
+++ b/task/src/main/webapp/WEB-INF/views/fragments/menu.html
@@ -2,6 +2,7 @@
 
 	<th:bloc th:fragment="top-directories" xmlns:th="http://www.thymeleaf.org">
 				<li><a th:href="@{/home}" th:text="#{titleform.home}">home</a></li>
+				<li><a th:href="@{/company/}" th:text="#{titleform.company}">room</a></li>
 				<li><a th:href="@{/department/}" th:text="#{titleform.departments}">department</a></li>
 				<li><a th:href="@{/position/}" th:text="#{titleform.position}">position</a></li>
 				<li><a th:href="@{/room/}" th:text="#{titleform.room}">room</a></li>
