--- a/task/src/main/webapp/WEB-INF/views/fragments/company-fargment.html
+++ b/task/src/main/webapp/WEB-INF/views/fragments/company-fargment.html
@@ -14,16 +14,16 @@
 					<td data-th-text="${company.nameCompany}"></td>
 					<td>
 						<ul class="menu align-right">
-								<li>
-									<button class="button fi-list" type="button" data-th-attr="data-toggle='example-' + @{{id}(id=${company.id})}" ></button>
-									<div class="dropdown-pane dropdown-pane-zie" data-th-id="'example-' + @{{id}(id=${company.id})}" data-dropdown data-auto-focus="true" data-close-on-click="true">
-										<ul class="menu vertical">
-    										<li><a data-th-href="@{edit/{id}(id=${company.id})}" data-th-text="#{buttonname.edit}" data-open="editRoom" data-th-attr="data-ajax-url='edit/?id='+${company.id}"></a></li>
-      										<li><a data-th-href="@{delete/{id}(id=${company.id})}" data-th-text="#{buttonname.delete}"></a></li>
-      									</ul>
-      					 			</div>
-      					 		</li>
-      					 	</ul>
+							<li>
+								<button class="button fi-list" type="button" data-th-attr="data-toggle='example-' + @{{id}(id=${company.id})}" ></button>
+								<div class="dropdown-pane dropdown-pane-zie" data-th-id="'example-' + @{{id}(id=${company.id})}" data-dropdown data-auto-focus="true" data-close-on-click="true">
+									<ul class="menu vertical">
+    									<li><a data-th-href="@{edit/{id}(id=${company.id})}" data-th-text="#{buttonname.edit}" data-open="editRoom" data-th-attr="data-ajax-url='edit/?id='+${company.id}"></a></li>
+      									<li><a data-open="deleteRecord" data-th-attr="data-company-id=${company.id}" data-th-text="#{buttonname.delete}"></a></li>
+      								</ul>
+      				 			</div>
+      				 		</li>
+   					 	</ul>
 					</td>
 				</tr>
 			</tbody>
@@ -32,14 +32,40 @@
 	
 	
 	<div data-th-fragment="core-form" data-th-remove="tag">
+			<!--  -->
 			<div class="medium-12 columns">
 				<input type="hidden" name="id" data-th-field="*{id}" /> 
 			</div>
-		<!-- name -->
+			<!-- name -->
 			<div data-th-class="${#fields.hasErrors('nameCompany')} ? 'medium-12 columns invalid' : 'medium-12 columns' " >
 				<label data-th-text="#{inputlabel.nameCompany}"></label> 
 				<input type="text" id="nameCompany" name="nameCompany" data-th-field="*{nameCompany}" data-th-placeholder="#{inputlabel.nameCompany}" autofocus="autofocus" /> 
 				<span class="form-error is-visible" data-th-errors="*{nameCompany}" ></span>
 			</div>
+			<!-- disable -->
+			<div class="medium-12 columns">
+				<label data-th-text="#{inputlabel.isdisable}"></label>
+				<input type="checkbox" id="disable" data-th-field="*{disable}">
+			</div>
+	</div>
+	
+	<div data-th-fragment="deleteModalWindow" data-th-remove="tag">
+		<form data-th-id="deleteCompany" data-th-action="@{delete}" method="POST" data-th-object="${selectedCompany}">
 			
+			<button class="close-button" data-close aria-label="Close modal" type="button">
+    			<span aria-hidden="true">&times;</span>
+  			</button>
+  			
+  			<p></p>
+  			<p class="lead">
+  				<span data-th-text="#{titleform.deleteCompany}"></span>
+  				<span data-th-text="${selectedCompany.nameCompany}"></span>
+  			</p>
+  			
+  			<input type="hidden" name="id" data-th-field="*{id}" /> 
+  			
+  			<div class="small button-group align-right">
+  				<button class="button"  data-close  data-th-text="#{buttonname.submit}" data-th-name="save">Submit</button>
+  			</div>
+		</form>
 	</div>
