--- a/task/src/main/webapp/WEB-INF/views/department/department.html
+++ b/task/src/main/webapp/WEB-INF/views/department/department.html
@@ -1,66 +1,47 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<link th:insert="templates/head.html" />
-<title th:text="#{titleform.home}">title</title>
-</head>
+<html xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+	<head data-th-replace="templates/head :: head(#{titleform.departments})">
+	</head>
 <body>
-	<div class="top-bar" >
-		<div th:insert="templates/menu/top-directories.html"></div>
-		<div th:insert="templates/menu/logof-logon.html"></div>
-	</div>
-	<br>
-	<div class="row">
-		<div class="columns">
-			<table class="table">
-				<thead>
-					<tr>
-						<th th:text="#{inputlabel.nameDepartment}">name department</th>
-						<th th:text="#{inputlabel.numberPhone}">phone department</th>
-						<th th:text="#{inputlabel.numberFax}">fax department</th>
-						<th></th>
-						<th>
-							<ul class="menu expanded">
-								<li><a th:href="@{add}" class="step fi-page-add size-21 button expanded"></a></li>
-							</ul>
-						</th>
-					</tr>
-				</thead>
-				<tbody th:each="department : ${departments}">
-					<tr>
-						<td th:text="${department.name}"></td>
-						<td th:text="${department.phone}"></td>
-						<td th:text="${department.fax}"></td>
-						<td th:text="${department.disable}"></td>
-						<td>
-							<div class="menu expanded button-group">
 
-									<!-- edit -->
-									<a th:href="@{edit/{id}(id=${department.id})}" 
-										class="small small-only-expanded fi-page-edit button"></a>
+	<div class="app-dashboard shrink-medium">
+		<div class="row expanded app-dashboard-top-nav-bar">
+			<div class="columns medium-2">
+				<button data-toggle="app-dashboard-sidebar"
+					class="menu-icon hide-for-medium"></button>
+				<a class="app-dashboard-logo" data-th-text="#{titleform.company}"></a>
+			</div>
+			<div class="columns show-for-medium">
+			
+			</div>
+			<div data-th-insert="templates/menu/logof-logon.html"></div>
+		</div>
 
-									<!-- delete -->
-									<a th:href="@{delete/{id}(id=${department.id})}" 
-										class="small large-only-expanded fi-skull button" ></a>
-							</div>	
-						</td>
-					</tr>
-				</tbody>
-			</table>
+		<div class="app-dashboard-body off-canvas-wrapper">
+			<div id="app-dashboard-sidebar"	class="app-dashboard-sidebar position-left off-canvas off-canvas-absolute reveal-for-medium" data-off-canvas>
+				<div class="app-dashboard-sidebar-inner">
+					<ul data-th-replace="fragments/menu :: top-directories"></ul>
+				</div>
+			</div>
+
+			<div class="app-dashboard-body-content off-canvas-content" data-off-canvas-content>
+				
+			</div>
 		</div>
 	</div>
 	
-	<!-- modal -->
-	<span th:insert="templates/error-dependencies.html">
-	</span>
+	<!-- modal window delete -->
+	<div class="reveal" data-th-id="deleteRecord" data-reveal data-options="closeOnClick:false; closeOnEsc:false;">
+		<div data-th-replace="fragments/company-fargment :: deleteModalWindow"></div>
+	</div>
 	
-	<script type="text/javascript">
+	<div data-th-insert="templates/head.html :: script"></div>
+	
+	<script type="application/javascript" data-th-inline="javascript">
 		$(document).foundation();
 	</script>
 	
-	<div th:if="${deletePosition}">
+	<div data-th-if="${deletePosition}">
 		<script type="text/javascript">
 			$('#deleteRecord').foundation('open');	
 		</script>
