--- a/task/src/main/webapp/WEB-INF/views/department/department.html
+++ b/task/src/main/webapp/WEB-INF/views/department/department.html
@@ -1,50 +1,42 @@
 <!DOCTYPE html>
-<html xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html>
 	<head data-th-replace="templates/head :: head(#{titleform.departments})">
 	</head>
-<body>
-
-	<div class="app-dashboard shrink-medium">
-		<div class="row expanded app-dashboard-top-nav-bar">
-			<div class="columns medium-2">
-				<button data-toggle="app-dashboard-sidebar"
-					class="menu-icon hide-for-medium"></button>
-				<a class="app-dashboard-logo" data-th-text="#{titleform.company}"></a>
+	
+	<body>
+		
+		<div class="app-dashboard shrink-medium">
+			<div class="row expanded app-dashboard-top-nav-bar">
+				<div class="columns medium-2">
+					<button data-toggle="app-dashboard-sidebar"
+						class="menu-icon hide-for-medium"></button>
+					<a class="app-dashboard-logo" data-th-text="#{titleform.departments}"></a>
+				</div>
+				<div class="columns show-for-medium">
+				
+				</div>
+				<div data-th-insert="templates/menu/logof-logon.html"></div>
 			</div>
-			<div class="columns show-for-medium">
-			
-			</div>
-			<div data-th-insert="templates/menu/logof-logon.html"></div>
-		</div>
-
-		<div class="app-dashboard-body off-canvas-wrapper">
-			<div id="app-dashboard-sidebar"	class="app-dashboard-sidebar position-left off-canvas off-canvas-absolute reveal-for-medium" data-off-canvas>
-				<div class="app-dashboard-sidebar-inner">
-					<ul data-th-replace="fragments/menu :: top-directories"></ul>
+	
+			<div class="app-dashboard-body off-canvas-wrapper">
+				<div id="app-dashboard-sidebar"	class="app-dashboard-sidebar position-left off-canvas off-canvas-absolute reveal-for-medium" data-off-canvas>
+					<div class="app-dashboard-sidebar-inner">
+						<ul  data-th-replace="fragments/menu :: top-directories"></ul>
+					</div>
+				</div>
+	
+				<div class="app-dashboard-body-content off-canvas-content" data-off-canvas-content>
+					<div data-th-replace="fragments/department-fargment :: table-departments"></div>
 				</div>
 			</div>
-
-			<div class="app-dashboard-body-content off-canvas-content" data-off-canvas-content>
-				
-			</div>
 		</div>
-	</div>
+		
 	
-	<!-- modal window delete -->
-	<div class="reveal" data-th-id="deleteRecord" data-reveal data-options="closeOnClick:false; closeOnEsc:false;">
-		<div data-th-replace="fragments/company-fargment :: deleteModalWindow"></div>
-	</div>
-	
-	<div data-th-insert="templates/head.html :: script"></div>
+	<div data-th-insert="templates/head :: script" data-th-remove="tag"></div>
 	
 	<script type="application/javascript" data-th-inline="javascript">
 		$(document).foundation();
 	</script>
 	
-	<div data-th-if="${deletePosition}">
-		<script type="text/javascript">
-			$('#deleteRecord').foundation('open');	
-		</script>
-	</div>
-</body>
+	</body>
 </html>
