adding edit in delete department

--- a/task/src/main/webapp/WEB-INF/views/company/company.html
+++ b/task/src/main/webapp/WEB-INF/views/company/company.html
@@ -39,7 +39,7 @@
 		<div data-th-replace="fragments/company-fargment :: deleteModalWindow"></div>
 	</div>
 	
-	<div data-th-insert="templates/head.html :: script"></div>
+	<div data-th-insert="templates/head :: script"></div>
 	
 	<script type="application/javascript" th:inline="javascript">
 		$(document).foundation();
