--- a/task/src/main/webapp/WEB-INF/views/templates/top-bar.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/top-bar.html
@@ -19,8 +19,8 @@
 			</div>
 			<div class="columns shrink app-dashboard-top-bar-actions">
 				<div sec:authorize="!isAuthenticated()">
-					<button th:href="home" th:text="#{buttonname.login}"
-						class="button hollow">Sing in</button>
+					<a data-th-href="home" data-th-text="#{buttonname.login}"
+						class="button hollow">Sing in</a>
 				</div>
 				<div sec:authorize="isAuthenticated()">
 					<form name="logonLogoff" th:action="@{/logout}" method="POST">
