--- a/task/src/main/webapp/WEB-INF/views/templates/menu/logof-logon.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/menu/logof-logon.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <div class="columns shrink app-dashboard-top-bar-actions">
-	<div sec:authorize="!isAuthenticated()">
-		<button th:href="home" th:text="#{buttonname.login}" class="button hollow">Sing in</button>
+	<div data-sec-authorize="!isAuthenticated()">
+		<a data-th-href="home" data-th-text="#{buttonname.login}" class="button hollow">Sing in</a>
 	</div>
-	<div sec:authorize="isAuthenticated()">
-		<form name="logonLogoff" th:action="@{/logout}" method="POST">
-			<button class="button hollow expanded" type="submit" th:text="#{buttonname.logoff}" value="Sing out"></button>
+	<div data-sec-authorize="isAuthenticated()">
+		<form name="logonLogoff" data-th-action="@{/logout}" method="POST">
+			<button class="button hollow expanded" type="submit" data-th-text="#{buttonname.logoff}" value="Sing out"></button>
 		</form>
 	</div>
 </div>
