--- a/task/src/main/webapp/WEB-INF/views/fragments/menu.html
+++ b/task/src/main/webapp/WEB-INF/views/fragments/menu.html
@@ -1,10 +1,15 @@
 
+	<!--  -->
+	<ul class="vertical menu expanded" data-th-fragment="home-menu" >
+		<li><a data-th-href="@{employee/}"	data-th-text="#{titleform.admin}" class="expanded"></a></li>
+		<li><a data-th-href="@{position/}"	data-th-text="#{titleform.home.directories}" class="expanded"></a></li>
+	</ul>
 
-	<ul class="vertical menu" data-th-fragment="top-directories">
-				<li><a data-th-href="@{/home}" data-th-text="#{titleform.home}">home</a></li>
-				<li><a data-th-href="@{/company/}" data-th-text="#{titleform.company}">room</a></li>
-				<li><a data-th-href="@{/department/}" data-th-text="#{titleform.departments}">department</a></li>
-				<li><a data-th-href="@{/position/}" data-th-text="#{titleform.position}">position</a></li>
-				<li><a data-th-href="@{/room/}" data-th-text="#{titleform.room}">room</a></li>
+	<ul class="vertical menu expanded" data-th-fragment="top-directories">
+		<li><a data-th-href="@{/home}" data-th-text="#{titleform.home}">home</a></li>
+		<li><a data-th-href="@{/company/}" data-th-text="#{titleform.company}">room</a></li>
+		<li><a data-th-href="@{/department/}" data-th-text="#{titleform.departments}">department</a></li>
+		<li><a data-th-href="@{/position/}" data-th-text="#{titleform.position}">position</a></li>
+		<li><a data-th-href="@{/room/}" data-th-text="#{titleform.room}">room</a></li>
 	</ul>
 		
