--- a/task/src/main/webapp/WEB-INF/views/fragments/room.html
+++ b/task/src/main/webapp/WEB-INF/views/fragments/room.html
@@ -1,20 +1,15 @@
 	
-	<div th:fragment="info-form" xmlns:th="http://www.thymeleaf.org" th:remove="tag">
-		<div class="row">
+	<div data-th-fragment="info-form" data-th-remove="tag">
+		
 		<!-- name -->
 			<div class="medium-12 columns">
-				<span th:text="#{inputlabel.numberRoom}"></span> 
+				<label data-th-text="#{inputlabel.numberRoom}"></label> 
 				<input type="text"
-					id="numberRoom" name="numberRoom" th:field="*{numberRoom}" autofocus="autofocus" /> <span
-					th:class="${#fields.hasErrors('numberRoom')} ? 'form-error is-visible' : '' "
-					th:errors="*{numberRoom}"></span>
+					id="numberRoom" name="numberRoom" data-th-field="*{numberRoom}" autofocus="autofocus" /> 
+					<span data-th-class="${#fields.hasErrors('numberRoom')} ? 'form-error is-visible' : '' " data-th-errors="*{numberRoom}"></span>
 			</div>
-		</div>
-		<div class="row ">
-				<fieldset class="column align-right">
-					<input type="submit" class="button" name="save" th:value="#{buttonname.submit}">
-			    </fieldset>
-		</div>
+		
+		<div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>
 	</div>
 	
 	
