--- a/task/src/main/webapp/WEB-INF/views/employee/employees.html
+++ b/task/src/main/webapp/WEB-INF/views/employee/employees.html
@@ -1,17 +1,57 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<link th:insert="templates/head.html" />
-<title>title</title>
-</head>
+<html>
+	<head data-th-replace="templates/head :: head(#{titleform.positions})"></head>
+	
 <body>
-	<div class="top-bar" >
-		<div th:insert="templates/menu/top-admin.html"></div>
-		<div th:insert="templates/menu/logof-logon.html"></div>
-	</div>
-	<br>
+
+	<div class="app-dashboard shrink-medium">
+			<div class="row expanded app-dashboard-top-nav-bar">
+				<div class="columns medium-2">
+					<button data-toggle="app-dashboard-sidebar"	class="menu-icon hide-for-medium"></button>
+					<a class="app-dashboard-logo" data-th-text="#{titleform.emploee}"></a>
+				</div>
+				<div class="columns show-for-medium">
+				
+				</div>
+				<div data-th-insert="templates/menu/logof-logon.html"></div>
+			</div>
+	
+			<div class="app-dashboard-body off-canvas-wrapper">
+				<div id="app-dashboard-sidebar"	class="app-dashboard-sidebar position-left off-canvas off-canvas-absolute reveal-for-medium" data-off-canvas>
+					<div class="app-dashboard-sidebar-inner">
+						<ul  data-th-replace="fragments/menu :: home-admin"></ul>
+					</div>
+				</div>
+	
+				<div class="app-dashboard-body-content off-canvas-content" data-off-canvas-content>
+					<div data-th-replace="fragments/employee-fargment :: table-employee"></div>
+				</div>
+			</div>
+		</div>
+		
+		<!-- modal window delete -->
+		<div class="reveal" data-th-id="deleteRecord" data-reveal data-options="closeOnClick:false; closeOnEsc:false;">
+			<form data-th-id="deletePosition" data-th-action="@{delete}" method="POST" data-th-object="${position}">
+			
+				<button class="close-button" data-close aria-label="Close modal" type="button">
+	    			<span aria-hidden="true">&times;</span>
+	  			</button>
+	  			
+	  			<div data-th-id="bodyForm" >
+	  			</div>
+	  			
+	  			<div class="small button-group align-right">
+	  				<button class="button"  data-close  data-th-text="#{buttonname.submit}" data-th-name="save">Submit</button>
+	  			</div>
+			</form>
+		</div>
+		
+		<div data-th-insert="templates/head :: script" data-th-remove="tag"></div>
+		
+		<script type="application/javascript" data-th-inline="javascript">
+			$(document).foundation();
+		</script>
+
 	<div class="row">
 		<div class="columns" th:fragment="tableEmployee">
 		
@@ -60,7 +100,7 @@
 			
 		</div>
 	</div>
-	<script type="text/javascript">
+	<script type="text/javascript" data-sec-authorize="hasAuthority('ADMINISTRATOR')">
 		$(document).foundation();
 
 		$('[data-open][data-employee-id]').on(
