--- a/task/src/main/webapp/WEB-INF/views/fragments/menu.html
+++ b/task/src/main/webapp/WEB-INF/views/fragments/menu.html
@@ -4,6 +4,11 @@
 		<li><a data-th-href="@{employee/}"	data-th-text="#{titleform.admin}" class="expanded"></a></li>
 		<li><a data-th-href="@{position/}"	data-th-text="#{titleform.home.directories}" class="expanded"></a></li>
 	</ul>
+	
+	<ul class="vertical menu expanded" data-th-fragment="home-admin" >
+		<li><a data-th-href="@{/home}" data-th-text="#{titleform.home}">home</a></li>
+		<li><a data-th-href="@{employee/}"	data-th-text="#{titleform.emploee}" class="expanded"></a></li>
+	</ul>
 
 	<ul class="vertical menu expanded" data-th-fragment="top-directories">
 		<li><a data-th-href="@{/home}" data-th-text="#{titleform.home}">home</a></li>
