--- a/task/src/main/webapp/WEB-INF/views/fragments/company-fargment.html
+++ b/task/src/main/webapp/WEB-INF/views/fragments/company-fargment.html
@@ -15,7 +15,7 @@
 					<td>
 						<ul class="menu align-right">
 							<li>
-								<button class="button fi-list" type="button" data-th-attr="data-toggle='example-' + @{{id}(id=${company.id})}" ></button>
+								<button class="button fi-list" data-th-classappend="${company.disable} ? 'hollow'" type="button" data-th-attr="data-toggle='example-' + @{{id}(id=${company.id})}" ></button>
 								<div class="dropdown-pane dropdown-pane-zie" data-th-id="'example-' + @{{id}(id=${company.id})}" data-dropdown data-auto-focus="true" data-close-on-click="true">
 									<ul class="menu vertical">
     									<li><a data-th-href="@{edit/{id}(id=${company.id})}" data-th-text="#{buttonname.edit}" data-open="editRoom" data-th-attr="data-ajax-url='edit/?id='+${company.id}"></a></li>
