--- a/task/src/main/webapp/WEB-INF/views/fragments/position-fargment.html
+++ b/task/src/main/webapp/WEB-INF/views/fragments/position-fargment.html
@@ -18,7 +18,7 @@
 						<td>
 							<ul class="menu align-right">
 								<li>
-									<button class="button fi-list" type="button" data-th-attr="data-toggle='example-' + @{{id}(id=${position.id})}" ></button>
+									<button class="button fi-list" data-th-classappend="${position.disable} ? 'hollow'" type="button" data-th-attr="data-toggle='example-' + @{{id}(id=${position.id})}" ></button>
 									<div class="dropdown-pane dropdown-pane-zie" data-th-id="'example-' + @{{id}(id=${position.id})}" data-dropdown data-auto-focus="true" data-close-on-click="true">
 										<ul class="menu vertical">
 	    									<li><a data-th-href="@{edit/{id}(id=${position.id})}" data-th-text="#{buttonname.edit}" data-th-attr="data-ajax-url='edit/?id='+${position.id}"></a></li>
