view form user applecation

--- a/task/src/main/webapp/WEB-INF/views/fragments/menu.html
+++ b/task/src/main/webapp/WEB-INF/views/fragments/menu.html
@@ -8,6 +8,7 @@
 	<ul class="vertical menu expanded" data-th-fragment="home-admin" >
 		<li><a data-th-href="@{/home}" data-th-text="#{titleform.home}">home</a></li>
 		<li><a data-th-href="@{/employee/}"	data-th-text="#{titleform.emploee}" class="expanded"></a></li>
+		<li><a data-th-href="@{/users}" data-th-text="#{titleform.users}" class="expanded" data-sec-authorize="hasAuthority('ADMINISTRATOR')"></a></li>
 	</ul>
 
 	<ul class="vertical menu expanded" data-th-fragment="top-directories">
