--- a/task/src/main/webapp/WEB-INF/views/home.html
+++ b/task/src/main/webapp/WEB-INF/views/home.html
@@ -30,6 +30,8 @@
 		</div>
 	</div>
 	
+	<div data-th-insert="templates/head :: script"></div>
+	
 	<script type="text/javascript">
 		$(document).foundation();
 	</script>
